[tool.poetry]
name = "interview-wolt"
version = "0.1.0"
description = "Demand Forecasting Data Science Challenge @ Wolt"
authors = ["Carlos Espeleta"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.3"
jupyterlab-code-formatter = "^2.2.1"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
